
syntax = "proto3";

package go.micro.srv.mysql;
option go_package = "proto";

message UpsertResult {
	int64 rows_affected = 1;
	int64 updated = 2;
	int64 inserted = 3;
}

message BoolField {
	bool value = 1;
	optional bool ignore = 2 [default = false];
}

message Pagination {
  optional uint64 page = 1 [default = 1];
  optional uint64 per_page  = 2 [default = 10];
}

enum SortDirection {
  ASC = 0;
  DESC = 1;
}

message Sort {
	string field = 1;
	SortDirection direction = 2;
}
